--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -18,6 +20,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "html-loader": "^1.1.0",
+    "node-sass": "^4.13.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
