--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "gsap": "^3.2.6",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-svg-loader": "^0.16.0"
