--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.2.6",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.6.2",
     "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
