--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "gsap": "^3.2.6",
+    "core-js": "^3.10.0",
+    "gsap": "^3.6.1",
+    "npm": "^7.8.0",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.11",
-    "vue-gtag": "^1.6.2",
+    "vue": "^2.6.12",
+    "vue-gtag": "^1.11.0",
     "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "html-loader": "^1.1.0",
-    "node-sass": "^4.13.1",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.3.2",
+    "node-sass": "^4.14.1",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
